<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.naveen.appy.StartActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/welcome_to_appy"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_background_white"
        android:fontFamily="@font/nunito_semibold"
        android:padding="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/need_a_new_account"
        android:textAllCaps="false"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/start_log_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/nunito_semibold"
        android:padding="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/already_have_a_account"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
